--- a/app/source/templates/default.jade
+++ b/app/source/templates/default.jade
@@ -2,16 +2,17 @@ doctype html
 html
   head
     link(rel='stylesheet', href='/css/index.css')
-    title Welcome to Microsoft Cloud Guild
+    title Welcome to Microsoft Cloud Guild - DevOps Hakathon 3 - HMOK
   body
     .header
-      h1.page-title Welcome to Microsoft Cloud Guild
+      h1.page-title Welcome to Microsoft Cloud Guild - DevOps Hakathon 3 - HMOK
 
     ul.nav
       li: a(href='/') Home
       li: a(href='#news') News
       li: a(href='#about') About
       li: a(href='#contact') Contact
+      li: a(href='#HMOK3') HMOK3
     
     .main-content
       block content
